# datacmp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  config.yaml  pyproject.toml  requirements.txt  setup.py
datacmp/: __init__.py  column_cleaning.py  data_cleaning.py  detailed_info.py  run_pipeline.py
datacmp/cleaning/: columns.py  missing.py  outliers.py
datacmp/cli/: commands.py
datacmp/core/: datacmp.py
datacmp/pipeline/: config.py  runner.py
datacmp/profiling/: correlations.py  statistics.py  summary.py
datacmp/utils/: helpers.py  logger.py
datacmp/visuals/: plots.py  reports.py
dataforge/: __init__.py  detailed_info.py
