[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacmp"
version = "3.0.0"
description = "A powerful Python library for data cleaning and exploratory data analysis"
readme = "README.md"
authors = [
    {name = "Moustafa Mohamed", email = "moustafa.mh.mohamed@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["data-cleaning", "eda", "data-analysis", "machine-learning", "data-science"]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "pyyaml>=6.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
full = [
    "polars>=0.18.0",
    "jinja2>=3.1.0",
    "ydata-profiling>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/MoustafaMohamed01/datacmp"
Documentation = "https://github.com/MoustafaMohamed01/datacmp#readme"
Repository = "https://github.com/MoustafaMohamed01/datacmp.git"
"Bug Tracker" = "https://github.com/MoustafaMohamed01/datacmp/issues"

[project.scripts]
datacmp = "datacmp.cli.commands:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datacmp*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=datacmp --cov-report=html --cov-report=term"
